--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-variant: small-caps;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: lighter;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --offwhite: rgb(230, 230, 230);
+  --offoffwhite: rgba(230, 230, 230, .6);
+  --offblack: rgb(40, 40, 44);
+  --offoffblack: rgba(40, 40, 40, .8);
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+/* HEADER */
+#header {
+  color: var(--offwhite);
+}
+
+header {
+  padding: 20px;
+  position: sticky;
+  background-color: var(--offblack);
+  box-shadow: 0px 10px 30px var(--offoffblack);
+}
+
+header h1 {
+  border-right: 1px solid ;
+}
+
+header h1, header p, footer h2, footer p {
+  padding: 0px 20px;
+}
+
+footer {
+  padding: 20px;
+  background-color: var(--offblack);
+  color: var(--offwhite);
+  box-shadow: -10px -10px 30px var(--offoffblack);
+}
+
+/* NAVIGATION */
+nav {
+  margin: 10px 0;
+}
+
+nav ul {
+  list-style: none;
+  justify-content: space-around;
+}
+
+nav ul li {
+  padding: 10px 20px 10px 20px;
+  background-color: var(--offoffblack);
+  box-shadow: 10px 10px 30px var(--offoffblack);
+  border-radius: 10px;
+  transition-duration: 2s;
+}
+
+nav ul li:hover {
+  background-color: var(--offblack);
+  color: rgb(179, 24, 24);
+}
+
+/* PROJECTS */
+#projects {
+  padding: 5vw;
+  justify-content: center;
+  text-align: center;
+}
+
+#projects h2 {
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--offoffblack);
+  border-radius: 10px;
+  text-shadow: 5px 10px 40px var(--offoffblack);
 }
