--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ a {
   transition-duration: 1s;
 }
 
+section a{
+  color: var(--offblack)
+}
+
 a:hover {
   color: var(--red);
   text-shadow: 10px 5px 15px var(--red);
@@ -50,12 +54,15 @@ header {
 }
 
 header h1 {
-  border-right: 1px solid ;
-  border-left: 1px solid ;
+  border-right: 1px solid var(--offoffwhite)
 }
 
 header h1, header p, footer h2, footer p {
   padding: 0px 20px;
+}
+
+header p {
+  font-size: 2.5vh;
 }
 
 #footer-container {
@@ -95,13 +102,46 @@ nav ul li:hover {
 }
 
 
-/* SECTIONS ABOUT & PROJECTS */
+/* SECTIONS */
 .sections {
   padding: 5vw;
   justify-content: center;
   text-align: center;
 }
 
+/* SECTION | ABOUT */
+#profile-pic-container {
+  padding: 20px 50px;
+}
+#profile-pic {
+  border-radius: 50%;
+  box-shadow: 0px 0px 20px var(--offblack);
+  width: 12.5vw;
+}
+
+#about-text {
+  text-align: left;
+}
+
+#about-text h2 {
+  border-bottom: 1px solid var(--offoffblack);
+  padding-bottom: 5px;
+}
+
+#about-text h3 {
+  padding-top: 3px;
+}
+
+#about-text ul li {
+  list-style: none;
+  padding: 1px 0px 1px 15px;
+}
+
+#about-text ul li:hover {
+  font-weight: bolder;
+}
+
+/* SECTION | PROJECTS */
 #projects h2 {
   padding-bottom: 10px;
   border-bottom: 1px solid var(--offoffblack);
