--- a/src/index.css
+++ b/src/index.css
@@ -225,3 +225,35 @@ nav ul li {
 .text {
   display: none;
 }
+
+/* MEDIA QUERY */
+@media screen and (max-width: 575px) {
+  * {
+    border: 1px solid red;
+  }
+
+  .mobile-hide {
+    display: none;
+  }
+  
+  /* header & nav */
+  #header header {
+    display: block;
+    text-align: center;
+    padding: 5px;
+  }
+
+  nav ul li {
+    padding: 5px;
+  }
+
+  /* about */
+  #about {
+    display: block;
+  }
+
+  #about-text {
+    text-align: center;
+  }
+
+}
