--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,281 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-variant: small-caps;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: lighter;
+  box-sizing: border-box;
+  /* border: 1px solid red; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --offwhite: rgb(230, 230, 230);
+  --offoffwhite: rgba(230, 230, 230, .6);
+  --offblack: rgb(40, 40, 44);
+  --offoffblack: rgba(40, 40, 40, .8);
+  --red: rgb(179, 24, 24);
+}
+
+/* header */
+header {
+  /* padding: 1vw; */
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#header {
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+  background-color: var(--offblack);
+  color: var(--offwhite);
+  box-shadow: 0px 10px 30px var(--offoffblack);
+  border-radius: 0 0 70% 70%;
+  padding-bottom: 1vw;
+}
+
+#navigation {
+  padding: 1vw;
+}
+
+#navigation ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+}
+
+.nav-link {
+  background-color: var(--offblack);
+  color: var(--offwhite);
+  padding: .5vw 1.5vw;
+  border-radius: 1rem;
+  transition-duration: 1s;
+}
+
+.nav-link:hover {
+  color: var(--red);
+  box-shadow: 0 5px 25px var(--red);
+}
+/* header h1 {
+  border-right: 1px solid var(--offoffwhite)
+} */
+
+
+.section {
+  padding: 5px 10px;
+  /* border-radius: 10px; */
+  background-color: var(--offoffwhite);
+  display: block;
+  /* flex-direction: column; */
+}
+
+#about {
+  color: var(--offwhite);
+  background-color: var(--offblack);
+}
+
+.pic {
+  border-radius: 2rem;
+}
+
+/* TEXT ELEMENTS */
+a {
+  text-decoration: none;
+  color: var(--offwhite);
+  transition-duration: 1s;
+}
+
+section a{
+  color: var(--offblack)
+}
+
+a:hover {
+  color: var(--red);
+  text-shadow: 10px 5px 15px var(--red);
+}
+
+/* HEADER & FOOTER */
+header h1, header p, footer h2, footer p {
+  padding: 0px 20px;
+}
+
+header p {
+  font-size: 2.5vh;
+}
+
+#footer-container {
+  align-items: center;
+}
+
+footer {
+  margin: .5vw;
+  padding: 20px;
+  background-color: var(--offblack);
+  color: var(--offwhite);
+  box-shadow: -10px -10px 30px var(--offoffblack);
+  border-radius: 90px;
+  text-align: center;
+}
+
+/* SECTIONS */
+.sections {
+  padding: 5%;
+  justify-content: center;
+  text-align: center;
+}
+
+/* SECTION | ABOUT */
+#profile-pic-container {
+  padding: 20px 50px;
+}
+#profile-pic {
+  border-radius: 50%;
+  box-shadow: 0px 0px 20px var(--offblack);
+  width: 12.5vw;
+}
+
+#about-text {
+  text-align: left;
+}
+
+#about-text h2 {
+  border-bottom: 1px solid var(--offoffblack);
+  padding-bottom: 5px;
+}
+
+#about-text h3 {
+  padding-top: 3px;
+}
+
+#about-text ul li {
+  list-style: none;
+  padding: 1px 0px 1px 15px;
+}
+
+#about-text ul li:hover {
+  font-weight: bolder;
+}
+
+/* SECTION | PROJECTS */
+#projects h2 {
+  padding: 10px;
+  border-radius: 40px;
+  background-color: var(--offblack);
+  color: var(--offwhite);
+  text-shadow: 5px 10px 40px var(--offoffblack);
+  box-shadow: 0px 0px 20px var(--offblack);
+}
+
+/* SUB-SECTION | SOLO WORK & COLLABORATIONS */
+.articles h3 {
+  margin: 50px 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--offoffblack);
+  border-radius: 40px;
+  color: var(--offoffblack);
+  text-shadow: 5px 10px 40px var(--offoffblack);
+  font-size: 3vh;
+  
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  padding: 20px;
+  grid-gap: 50px 25px;
+  width: 100%;
+}
+
+.featured-project {
+  grid-column: 1 / -1;
+  display: flex;
+}
+
+.collaborations {
+  padding: 20px;
+}
+
+.card {
+  background-color: var(--offoffwhite);
+  border-radius: 40px;
+  text-align: left;
+  padding: 20px;
+  box-shadow: 0px 0px 50px var(--offblack);
+}
+
+.non-featured {
+  display: inline-block;
+}
+
+.group-projects {
+  display: flex;
+  margin: 50px 0;
+}
+
+.card-img {
+  padding: 20px;
+}
+
+.card-img img {
+  border-radius: 40px;
+  width: 100%;
+  opacity: 80%;
+  transition-duration: 1s;
+}
+
+.card-img img:hover {
+  opacity: 100%;
+  box-shadow: 0px 0px 20px var(--offoffblack);
+}
+
+.card-body {
+  padding: 1vw;
+}
+
+.card-body h4 {
+  border-bottom: 1px solid var(--offoffblack);
+  padding: 1vh;
+  font-weight: bolder;
+}
+
+.card-body p {
+  padding-top: 1vh;
+}
+
+.text {
+  display: none;
+}
+
+/* MEDIA QUERY */
+@media screen and (max-width: 575px) {
+  * {
+    border: 1px solid red;
+  }
+
+  .mobile-hide {
+    display: none;
+  }
+  
+  /* header & nav */
+  #header header {
+    display: block;
+    text-align: center;
+    padding: 5px;
+  }
+
+  nav ul li {
+    padding: 5px;
+  }
+
+  /* about */
+  #about {
+    display: block;
+  }
+
+  #about-text {
+    text-align: center;
+  }
+
 }
