--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@100&family=Raleway:wght@100&display=swap');
 
 * {
   margin: 0;
@@ -17,13 +17,24 @@
   --red: rgb(179, 24, 24);
 }
 
-/* header */
-header {
+/* footer */
+header, footer {
   justify-content: center;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
+}
+
+footer {
+  margin: 0 .75vw 1vh .75vw;
+  border-bottom: 1px solid var(--offoffblack);
+  border-radius: 0 0 40px 40px;
+  box-shadow: 0 6vh 30px var(--offoffblack);
+}
+
+/* header */
+header {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
@@ -31,7 +42,7 @@ header {
   background-color: var(--offblack);
   color: var(--offwhite);
   box-shadow: 0px 10px 30px var(--offoffblack);
-  border-radius: 0 0 45% 45%;
+  border-radius: 0 0 35% 35%;
   padding-bottom: .5vw;
 }
 
@@ -62,28 +73,36 @@ header {
   transition-duration: 1s;
 }
 
-.nav-link:hover {
+/* .nav-link:hover {
   color: var(--red);
   box-shadow: 0 5px 25px var(--red);
-}
+} */
 
 /* sections */
 .section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   padding: 5px 10px;
 }
 
 .subheader {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   padding: .25vw 6vw;
-  border-radius: .20rem .20rem 2rem 2rem;
+  border-radius: .20rem .20rem .75rem 2rem;
   border-bottom: 1px solid var(--offoffblack);
-  text-shadow: 0 0 10px var(--offblack);
-  text-align: center;
+  text-shadow: 5px 0 .75rem  var(--offoffblack);
+  margin-bottom: 1.25vh;
+}
+
+.description {
+  font-size: 1rem;
+  margin-left: 2vw;
+  padding: 0 1vw;
+  border-left: 1px solid var(--offoffwhite);
+  margin-bottom: .25vh;
 }
 
 /* component.About */
@@ -105,11 +124,10 @@ header {
 
 /* component.Projects */
 .projects-grid {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  /* grid-template-columns: auto; */
   justify-content: center;
-  align-items: center;
-  width: 100%;
+  grid-gap: 5vh
 }
 
 .project-screenshot {
@@ -118,17 +136,49 @@ header {
   margin: 1vw 0;
 }
 
+.project-title {
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5vw;
+}
+
+.project-urls {
+  font-size: 1.125rem;
+  text-align: end;
+}
+
+.app-code {
+  padding: 0 5vw;
+}
+
+.app-description {
+  /* text-transform: none; */
+  padding: 0 5vw 0 5vw;
+  font-weight: 300;
+}
+
+.app-description {
+  font-family: 'Raleway', sans-serif;
+}
+
 /* TEXT ELEMENTS */
+.underline {
+  border-bottom: 1px solid var(--offoffwhite);
+  flex-grow: 1;
+}
 a {
   text-decoration: none;
+  font-family: inherit;
   color: inherit;
   transition-duration: 1s;
 }
 
-a:hover {
+/* a:hover {
   color: var(--red);
   text-shadow: 10px 5px 15px var(--red);
-}
+} */
 
 @media screen and (min-width: 768px) {
   .projects-grid {
