--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -1,4 +1,28 @@
-#about-text {
+#about {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: .5rem;
+}
+
+#profile-pic {
+    border-radius: 50%;
+    width: 45vw;
+    margin: .5rem;
+    border: 1px solid var(--dark-accent);
+}
+
+#profile-text h2 {
+    margin: 2.5rem 0 .25rem 0;
+    padding-right: .25rem;
+    border-bottom: 1px solid var(--dark-accent);
+    width: fit-content;
+}
+
+#bio {
+    grid-column: span 2;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+    padding: 0 .75rem;
+    font-family: 'Raleway', sans-serif;
 }
