--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   padding: 0;
   font-weight: lighter;
   box-sizing: border-box;
-  /* border: 1px solid red; */
+  /* outline: 1px solid blue; */
 }
 
 :root {
@@ -18,6 +18,8 @@
 }
 
 main {
+  display: flex;
+  flex-direction: column;
   padding: 2%;
 }
 
