--- a/src/components/ResumeHeader/index.css
+++ b/src/components/ResumeHeader/index.css
@@ -1,16 +1,20 @@
 #resume-header {
-    grid-template-columns: repeat(3, 33%);
-    justify-content: space-between;
     display: flex;
     padding-bottom: 2vh;
 }
 
-.center {
-    text-align: center;
+.left, .right {
+    display: none;
 }
 
-.right, .right-text {
-    text-align: end;
+.center {
+    text-align: center;
+    width: 100%;
+}
+
+.center .display-screen {
+    font-size: 2rem;
+    font-weight: 600;
 }
 
 /* fa icons */
