--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -6,13 +6,13 @@
 
 #profile-pic {
     border-radius: 50%;
-    width: 45vw;
+    width: 35vw;
     margin: .5rem;
     border: 1px solid var(--dark-accent);
 }
 
 #profile-text h2 {
-    margin: 2.5rem 0 .25rem 0;
+    margin: 1.5rem 0 .25rem 0;
     padding-right: .25rem;
     border-bottom: 1px solid var(--dark-accent);
     width: fit-content;
@@ -25,4 +25,15 @@
     gap: 1rem;
     padding: 0 .75rem;
     font-family: 'Raleway', sans-serif;
+}
+
+@media screen and (min-width: 768px) {
+    #about {
+        padding: 0 10vw;
+        font-size: 1.25rem;
+    }
+
+    #profile-pic {
+        width: 25vw;
+    }
 }
