--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -1,4 +1,4 @@
-.portfolio-wrapper {
+.portfolio {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: .9rem;
@@ -44,50 +44,20 @@
 .project-details p {
     padding: 0 .75rem;
     word-spacing: .25rem;
-    font-size: .95rem;
 }
-/* display.tablet */
+
 @media screen and (min-width: 768px) {
-    .left-btn {
-        border-bottom-left-radius: 1rem;
+    .portfolio {
+        grid-template-columns: repeat(3, 1fr);
     }
 
-    .right-btn {
-        border-bottom-right-radius: 1rem;
-    }
-
-    /* component.Projects */
-    .projects-grid {
-        grid-template-columns: repeat(2, auto);
+    .highlight {
+        grid-column: span 2;
     }
 }
 
 @media screen and (min-width: 1024px) {
-
-    /* component.Projects */
-    .project-screenshot {
-        border-radius: 2rem;
-    }
-
-    .project-title {
-        font-size: 1.25rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .project-title,
-    .app-code,
-    .app-description {
-        padding: 0 2vw;
-    }
-
-    .project-urls {
-        font-size: 1.125rem;
-        text-align: end;
-    }
-
-    .app-description {
-        font-family: 'Raleway', sans-serif;
+    .portfolio {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
